--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,13 +13,14 @@ source:
 
 build:
   number: 0
-  script: python -m pip install --no-deps --ignore-installed .
   noarch: python
+  script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv '
 
 requirements:
-  build:
+  host:
     - python >=3.5
     - pip
+    - setuptools_scm >=3.4.1
     - attrs >=17.3
   run:
     - python >=3.5
