--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,8 @@ requirements:
     - pip
     - attrs >=20.1.0
     - poetry-core >=1.0.0
+    - wheel
+    - setuptools
   run:
     - python >=3.7
     - attrs >=20.1.0
