--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,7 +50,7 @@ test:
   #   - tests
 
 about:
-  home: https://github.com/Tinche/cattrs
+  home: https://github.com/python-attrs/cattrs
   license: MIT
   license_family: MIT
   license_file: LICENSE
@@ -60,7 +60,7 @@ about:
     cattrs works best with attrs classes and the usual Python collections, but other
     kinds of classes are supported by manually registering converters.
   doc_url: https://cattrs.readthedocs.io/en/latest/
-  dev_url: https://github.com/Tinche/cattrs
+  dev_url: https://github.com/python-attrs/cattrs
 
 extra:
   recipe-maintainers:
