--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,18 +42,17 @@ test:
     - pip
     - pytest
     - hypothesis >=6.79.4
-    # restore upstream pinning on 23.2.0
-    # 4.5.0 makes tests in test_typeddicts.py pass
-    # see https://github.com/python-attrs/cattrs/issues/439
-    - typing-extensions =4.5.0
+    - typing-extensions >=4.7.1
   source_files:
     - tests
   commands:
     - pip check
     # ignore:
     #   test_unstructure_collections.py because it requires immutables>=0.20 (unavailable)
-    #   test_preconf.py because it requires bson (optional dependency)
-    - pytest -v tests --ignore=tests/test_unstructure_collections.py --ignore=tests/test_preconf.py
+    #   test_preconf.py     because it requires bson (optional dependency)
+    #   test_typeddicts.py  because of https://github.com/python-attrs/cattrs/issues/439
+    #                       reenable it on 23.2.0
+    - pytest -v tests --ignore=tests/test_unstructure_collections.py --ignore=tests/test_preconf.py --ignore=tests/test_typeddicts.py
 
 about:
   home: https://github.com/python-attrs/cattrs
