--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,29 +1,30 @@
 {% set name = "cattrs" %}
-{% set version = "23.1.2" %}
+{% set version = "24.1.2" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://github.com/python-attrs/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 9dbc7359c1ac2acdd011607218fd2aac26aab5fdaa51a7e162110d029e277ff3
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/cattrs-{{ version }}.tar.gz
+  sha256: 8028cfe1ff5382df59dd36474a86e02d817b06eaf8af84555441bac915d2ef85
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
-  skip: true  # [py<37]
+  skip: true  # [py<38]
 
 requirements:
   host:
     - python
     - pip
-    - poetry-core >=1.1.0
+    - hatchling
+    - hatch-vcs
   run:
     - python
-    - attrs >=20
-    - exceptiongroup             # [py<311]
-    - typing_extensions >=4.1.0  # [py<311]
+    - attrs >=23.1.0
+    - exceptiongroup >=1.1.1            # [py<311]
+    - typing_extensions >=4.1.0,!=4.6.3 # [py<311]
 
 test:
   imports:
@@ -32,19 +33,8 @@ test:
     - cattr.preconf
   requires:
     - pip
-    - pytest
-    - hypothesis >=6.79.4
-    - typing-extensions >=4.7.1
-  source_files:
-    - tests
   commands:
     - pip check
-    # ignore:
-    #   test_unstructure_collections.py because it requires immutables>=0.20 (unavailable)
-    #   test_preconf.py     because it requires bson (optional dependency)
-    #   test_typeddicts.py  because of https://github.com/python-attrs/cattrs/issues/439
-    #                       reenable it on 23.2.0
-    - pytest -v tests --ignore=tests/test_unstructure_collections.py --ignore=tests/test_preconf.py --ignore=tests/test_typeddicts.py
 
 about:
   home: https://github.com/python-attrs/cattrs
